[tool.poetry]
name = "KM2025"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
japanize-matplotlib = "^1.1.3"
plotly = "^5.24.1"
geopandas = "^1.0.1"
openpyxl = "^3.1.5"
sympy = "^1.13.3"
numpy = "^2.2.1"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
icecream = "^2.1.3"
rasterio = "^1.4.3"
lxml = "^5.3.0"
scikit-learn = "^1.6.0"
fiona = "^1.10.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
